--- a/mysite/static/CSS/peep-project.css
+++ b/mysite/static/CSS/peep-project.css
@@ -21,3 +21,11 @@ h1, h2, h3, h4 {
 .date {
     color: #828282;
 }
+
+.post {
+    margin-bottom: 70px;
+}
+
+.post h1 a, .post h1 a:visited {
+    color: #000000;
+}
